[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=8.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "any-llm-crypto"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dynamic = ["version"]
description = "Decrypt provider API keys using X25519 sealed box encryption and challenge-response authentication"
dependencies = [
    "pynacl>=1.6.0",
    "requests>=2.32.5",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]

docs = [
    "mkdocs",
    "mkdocs-material",
]

lint = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

test = [
    "pytest>=8,<9",
    "pytest-cov>=4.0.0",
    "pytest-timeout",
]

[project.scripts]
any-llm-crypto = "any_llm_crypto.cli:main"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.setuptools_scm]
version_file = "src/any_llm_crypto/_version.py"

[tool.ruff]
extend = "ruff.toml"

[tool.pytest.ini_options]
timeout = 120
filterwarnings = [
    "error",
]
